# HomeLab

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  NODES.md  README.md  TODO.md  ansible.cfg  deploy_homelab.sh  docker-compose.edge.yml  docker-compose.observe.yml  docker-compose.svc01.yml  docker-compose.yml  monthly-update.sh  on-boot.sh  on-shutdown.sh  on-shutdown.sh.tmpl  repo_split_breif.md  services.yml  setup.sh
alertmanager/: Dockerfile  alertmanager.yml.tmpl
ansible/: .env.example  ansible.cfg  bootstrap_edge.yml  inventory.ini  inventory.yml  inventory_pc.yml  load_ssh_key.sh
caddy/: Caddyfile
deploy-service/: pyproject.toml
deploy-service/deploy_service/: cli.py  compose.py  config.py  infisical.py  target.py
discord-gateway/: .env  .env.example  Dockerfile  app.py  webhook_map.json
docs/: MONITORING.md  NETWORK.md  TROUBLESHOOTING.md  repo_split_brief.md
fail2ban/: fail2ban.conf  fail2ban.conf.tmpl
grafana/: Dockerfile  docker-compose.yml  fetch_dashboards.sh
inventories/: bootstrap.ini  bootstrap.yml  prod.ini  prod.yml
n8n/: .env  .env.example
node_exportor/: docker-compose.yml
ntfy/: docker-compose.yml
playbooks/: apply_firewall.yml  backup.yml  bootstrap_edge.yml  bootstrap_edge_part2.yml  bootstrap_node.yml  deploy_edge.yml  deploy_observe.yml  deploy_svc.yml  healthcheck.yml  resolve_node_ips.yml  rollback.yml  update_all.yml
portainer/: docker-compose.yml
prometheus/: alert_rules.yml  alertmanager.yml.tmpl  docker-compose.yml  entrypoint.sh  prometheus.yml
python_projects/: deploy_greentechhub.sh
rust_desk/: docker-compose.yml
(+134 files in other folders)
