[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-service"
version = "0.1.0"
description = "Metadata-driven service deployer for the HomeLab bootstrap repo"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
deploy-service = "deploy_service.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deploy_service*"]
